<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img06"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        tools:layout_editor_absoluteX="-183dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/loguin02" />

        <TextView
            android:id="@+id/tvCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-115dp"
            android:layout_marginTop="30dp"
            android:text="@string/tv_Correo"
            android:textColor="#FAF9F9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
            android:textSize="10pt"/>

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="331dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/txt_Correo"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:textSize="10pt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/tvContraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-90dp"
            android:layout_marginTop="30dp"
            android:text="@string/tv_Contraseña"
            android:textColor="#F3F1F1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
            android:textSize="10pt"/>

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="331dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/txt_Contraseña"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="#FAF8F8"
            android:backgroundTint="@color/white"
            android:textSize="10pt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

        <Button
            android:id="@+id/button"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-105dp"
            android:layout_marginTop="30dp"
            android:text="@string/btn_Ingresar"
            android:textSize="8pt"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="-50dp"
            android:text="@string/btn_Cuenta"
            android:textSize="8pt"
            android:onClick="CrearCuenta"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>